--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
+    "start": "node dist/main.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "hpavel",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "rxjs": "^6.6.3",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
