--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
+    "setup": "npm install && npm run build",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
