--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "folleon-resources-backend",
+  "name": "foleon-resources-backend",
   "version": "1.0.0",
   "description": "A Node.js-based backed server for the Folleon fullstack assessment",
   "main": "dist/main.js",
@@ -14,12 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "rxjs": "^6.6.3",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.19"
   }
